syntax="proto3";

package storehouse_service;
option go_package="genproto/storehouse_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service TenderProductService {
    rpc CreateTenderProduct(CreateTenderProductRequest) returns (TenderProduct) {}
    rpc GetByIDTenderProduct(TenderProductPrimaryKey) returns (TenderProduct) {}
    rpc GetListTenderProduct(GetListTenderProductRequest) returns (GetListTenderProductResponse) {}
    rpc UpdateTenderProduct(UpdateTenderProductRequest) returns (TenderProduct) {}
    rpc UpdatePatchTenderProduct(UpdatePatchTenderProductRequest) returns (TenderProduct) {}
    rpc DeleteTenderProduct(TenderProductPrimaryKey) returns (google.protobuf.Empty) {}
}

message TenderProductPrimaryKey {
    string id = 1;
}

message TenderProduct {
    string tender_id = 1;
    string product_id = 2;
    string created_at = 3;
    string updated_at = 4;
}

message CreateTenderProductRequest {
    string tender_id = 1;
    string product_id = 2;
}

message UpdateTenderProductRequest {
    string tender_id = 1;
    string product_id = 2;
}

message UpdatePatchTenderProductRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListTenderProductRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetListTenderProductResponse {
    int32 count = 1;
    repeated TenderProduct tender_products = 2;
}
